added login page heading,button,input-boxes

--- a/index.html
+++ b/index.html
@@ -21,6 +21,35 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    
+    <div class="Parentbody">
+        <div class="box">
+          <p class="heading">SIGN UP</p>
+          <div class="email">
+            <span class="email-heading">Email</span>
+            <input class="input" type="text" />
+          </div>
+          <div class="password">
+            <span class="password-heading">Password</span>
+            <input class="input" type="password" />
+          </div>
+          <button class="login-button" type="button">SIGN UP</button>
+          <div class="line">
+            <span class="line-through"></span>
+            <span class="line-span">OR</span>
+            <span class="line-through"></span>
+          </div>
+          <div class="button-links">
+            <button class="google-btn">
+              <i class="fa-brands fa-google"></i>
+            </button>
+            <button class="facebook-btn">
+              <i class="fa-brands fa-facebook-f"></i>
+            </button>
+            <button class="linkedin-btn">
+              <i class="fa-brands fa-linkedin-in"></i>
+            </button>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
